fixing vertical alignment for ProjectO github-link with logo

--- a/my_portfolio/base/static/base/css/main.css
+++ b/my_portfolio/base/static/base/css/main.css
@@ -17,3 +17,12 @@ ul {
   list-style-type: none;
   display: inline-block;
 }
+
+.social-links ul, li, i{
+  color: rgb(8, 145, 224);
+  vertical-align: middle;
+  margin-left: 5px;
+  margin-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
